<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DesignPractice</string>
    <string name="hello_world">Hello world!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="server_client_id">903835812455-1gkfbeamoe9948j7gvjugtmfj4h71qn7.apps.googleusercontent.com</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <!--facebook app ids-->
    <string name="facebook_app_id">134154197518985</string>
    <string name="facebook_login_protocol_scheme">fb134154197518985</string>

    <!--twitter app ids-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">YAuJl6PRNo4KnNMjOSg6XLGpp</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">cNDgxT3jgCzfJw4ouJpoflQxwEVUUj0yJhEISoshOkch13FP1c</string>

    <string name="turn_off_flashlight">FlashLight on</string>

    <string name="turn_on_flashlight">flashLight off</string>

    <string name="title_activity_main">QR and Barcode Scanner</string>

    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_principal">Principal Amount ₹</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">Total Interest for Loan ₹</string>

</resources>
